# apdoom

./: .gitignore  .gitmodules  APDOOM.WAD  APHERETIC.WAD  APHEXEN.WAD  CMakeLists.txt  README.md  create_ap_gen_tool_release.bat  create_release.bat  credits-chex-quest.txt  credits-doom-1993.txt  credits-doom-heretic.txt  credits-doom-ii.txt  credits-heretic.txt  release.lst
Launcher/APDoomLauncher/: APDoomLauncher.csproj  APDoomLauncher.sln  AdvancedSettingsDOOM.Designer.cs  AdvancedSettingsDOOM.cs  App.config  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs
ap_gen_tool/: .gitignore  CMakeLists.txt  data.cpp  data.h  defs.h  generate.cpp  generate.h  ids_remap.h  main.cpp  maps.cpp  maps.h  open_world.cpp
ap_gen_tool/data/: Chex Quest.json  DOOM 1993.json  DOOM II.json  Heretic.json  convert.js  regions.json
ap_gen_tool/games/: chex_quest.json  doom.json  doom2.json  heretic.json
data/: LVSTEL.aseprite  ap.aseprite  checkmark.aseprite  level_select_mockup.aseprite
data/Heretic/: LVSTEL.aseprite  ap.aseprite  level_select_mock.aseprite
data/poptracker/: d2_location_names.csv  doom2_location_names.csv  heretic_location_names.csv  location_names.csv
src/: CMakeLists.txt  crispy.c  crispy.h  d_loop.c  heretic-res.rc.in  hexen-res.rc.in  i_system.c  i_video.c  m_config.c  m_controls.c  m_controls.h  strife-res.rc.in  v_trans.c  v_trans.h  v_video.c  v_video.h  w_main.c
src/archipelago/: .gitignore  CMakeLists.txt  apdoom.cpp  apdoom.h  apdoom2_c_def.h  apdoom2_def.h  apdoom_c_def.h  apdoom_def.h  apdoom_def_types.h  apheretic_c_def.h  apheretic_def.h  aphexen_c_def.h  aphexen_def.h  archipelago.cpp  regions.json
src/doom/: CMakeLists.txt  am_map.c  ap_notif.c  d_main.c  deh_thing.c  doomdef.h  doomstat.h  f_finale.c  g_game.c  g_game.h  hu_lib.c  hu_lib.h  hu_stuff.c  hu_stuff.h  info.c  info.h  level_select.c  level_select.h  m_crispy.c  m_crispy.h  m_menu.c  p_enemy.c  p_inter.c  p_map.c  p_mobj.c  p_mobj.h  p_saveg.c  p_setup.c  p_spec.c  p_switch.c  p_tick.c  p_user.c  r_data.c  r_main.c  s_sound.c  st_stuff.c  wi_stuff.c
src/heretic/: CMakeLists.txt  am_map.c  (+26 more)
(+34 files in other folders)
